<resources>
    <string name="app_name">Desafio2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Universidad Don Bosco</string>
    <string name="nav_header_subtitle">Desafío Práctico 2 - DSM</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="action_settings">Cerrar Sesión</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_shop">Realizar Compra</string>
    <string name="menu_history">Historial de compras</string>

    <string name="login_button">Ingresar</string>
    <string name="login_register">Registrarse</string>
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_textView">¿No posees cuenta?</string>

    <string name="register_button">Registrarse</string>
    <string name="register_login">Ingresar</string>
    <string name="register_textView">¿Ya posees cuenta?</string>
    <string name="register_email">Email</string>
    <string name="register_password">Contraseña</string>
</resources>