<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="366dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_textView"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="528dp" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.6"
            android:text="@string/login_register"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="287dp"
            tools:layout_editor_absoluteY="528dp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnIngresar"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>